--- a/src/style/animations.scss
+++ b/src/style/animations.scss
@@ -15,3 +15,15 @@
     left: 100%
   }
 }
+
+@keyframes zoom-in {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
