--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -16,7 +16,7 @@ html, body {
 
 .main-container {
   height: 100vh;
-  background-image: $black-scream, url("../assets/city_bg.png");
+  background-image: $black-scream, url("../assets/city_bg.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -69,84 +69,20 @@ html, body {
   }
 }
 
-// SKILL SECTION
-.skill-section {
-  height: 100vh;
-  background-image: linear-gradient(0, rgba(29, 31, 41, .9), rgba(29, 31, 41, .9)), url('../assets/rainy_rome.png');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: top;
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  align-items: center;
-  box-sizing: border-box;
-}
-
-
-.divider {
-  background-color: $primary-accent-color;
-  min-width: 200px;
-  height: 8px;
-  border-radius: 15px;
-  margin-top: 100px;
-}
-
-.skill-container {
-  width: 100%;
-  display: flex;
-  gap: 12px;
-  margin-top: 50px;
-  overflow: auto;
-}
-
-.skill-container::-webkit-scrollbar {
-  display: none;
-}
-
-.language-logo {
-  height: 60px;
-}
-
-.skill-card {
-  color: white;
-  padding: 40px 20px;
-  min-width: 400px;
-  height: 500px;
-  background: rgba(121, 121, 121, 0.2);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 12px;
-}
-
-.skill-header {
-  font-size: $text-big;
-  color: white;
-}
-
-.card-header {
-  font-size: $text-medium;
-  color: white;
-  font-weight: bold;
-}
-
 // Scrollbar
-body::-webkit-scrollbar {
-  width: 1em;
-  background-color: $background-color;
-}
+body {
+  &::-webkit-scrollbar {
+    width: 1em;
+    background-color: $background-color;
+  }
 
-body::-webkit-scrollbar-track {
-  box-shadow: 0 0 6px rgba(255, 255, 255, 0.3);
-}
+  &::-webkit-scrollbar-track {
+    box-shadow: 0 0 6px rgba(255, 255, 255, 0.3);
+  }
 
-body::-webkit-scrollbar-thumb {
-  border-radius: 15px;
-  background: linear-gradient(0deg, $primary-color, $primary-accent-color);
-  border: solid $background-color 4px;
+  &::-webkit-scrollbar-thumb {
+    border-radius: 15px;
+    background: linear-gradient(0deg, $primary-color, $primary-accent-color);
+    border: solid $background-color 4px;
+  }
 }
