--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,9 +1,10 @@
+$text-x-small: 20px;
 $text-small: 30px;
 $text-medium: 40px;
 $text-big: 60px;
 
 $black-scream: linear-gradient(45deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.2));
 
-$background-color: #1D1F29;
+$background-color: #121215;
 $primary-color: #764138;
 $primary-accent-color: #9D4A38;
