--- a/src/style/animations.scss
+++ b/src/style/animations.scss
@@ -27,3 +27,16 @@
     transform: scale(1);
   }
 }
+
+@keyframes opacity-in {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
