--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -4,15 +4,19 @@
 html, body {
   margin: 0;
   padding: 0;
+  font-family: 'rubik', serif;
 }
 
-.scroll-container {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
+body {
+  overflow: hidden;
+}
+
+.container {
   overflow: auto;
+  height: 100vh;
+  scroll-snap-type: y proximity;
+  scroll-behavior: smooth;
 }
-
 
 .main-container {
   height: 100vh;
@@ -23,6 +27,27 @@ html, body {
   flex-direction: column;
   overflow: hidden;
   position: relative;
+  scroll-snap-align: start;
+}
+
+.scroll-down {
+    position: absolute;
+    bottom: 20px;
+    right: 40px;
+  display: flex;
+  flex-direction: column;
+
+  & .mouse {
+    width: 20px;
+    height: 35px;
+  }
+
+  & .arrow {
+    width: 20px;
+    height: 20px;
+    margin-top: 5px;
+    animation: opacity-in 3s ease-in-out infinite;
+  }
 }
 
 .profile-image {
@@ -70,14 +95,16 @@ html, body {
 }
 
 // Scrollbar
-body {
+.container {
+  overflow: auto;
+
   &::-webkit-scrollbar {
     width: 1em;
     background-color: $background-color;
   }
 
   &::-webkit-scrollbar-track {
-    box-shadow: 0 0 6px rgba(255, 255, 255, 0.3);
+    box-shadow: 0 0 6px rgba(51, 51, 51, 0.3);
   }
 
   &::-webkit-scrollbar-thumb {
