--- a/src/style/personalInfo.scss
+++ b/src/style/personalInfo.scss
@@ -4,11 +4,13 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  padding-bottom: 40px;
   align-items: center;
   background-image: linear-gradient(rgba(29, 31, 41, 0.9), rgba(12, 12, 17, 0.9)), url("../assets/rainy_milan .webp");
   background-repeat: no-repeat;
   background-size: cover;
   box-sizing: border-box;
+  scroll-snap-align: start;
 
   & .content {
     display: flex;
@@ -16,7 +18,7 @@
     height: 100%;
     width: 100%;
     box-sizing: border-box;
-    padding: 40px;
+    padding: 20px 40px;
   }
 
   & .header {
@@ -30,20 +32,35 @@
 
   & .info-card {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     width: 50%;
     height: 100%;
+    gap: 12px;
     background: rgba(121, 121, 121, 0.2);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     box-sizing: border-box;
-    padding: 80px 40px;
+    padding: 120px 40px;
+
+    & .field-name {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: end;
+      font-weight: bold;
+    }
+
+    & .field-value {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: start;
+    }
 
     & span {
-      font-size: $text-medium;
+      font-size: $text-small;
       color: white;
     }
 
@@ -54,14 +71,14 @@
     }
 
     & .link {
-      font-size: $text-medium;
+      font-size: $text-small;
       color: white;
     }
   }
 
   & .canvas {
     width: 100%;
-    height: 100%
+    height: 100%;
   }
 
   @media only screen and (max-width: 1300px) {
