--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -8,3 +8,6 @@ $black-scream: linear-gradient(45deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.2));
 $background-color: #121215;
 $primary-color: #764138;
 $primary-accent-color: #9D4A38;
+
+// breakpoints
+$mobile-breakpoint: 600px;
