feat(padding): added paddint to info section

--- a/src/style/personalInfo.scss
+++ b/src/style/personalInfo.scss
@@ -40,6 +40,11 @@
     box-sizing: border-box;
     padding: 120px 40px;
 
+    @media only screen and (max-width: $mobile-breakpoint) {
+      gap: 12px;
+    }
+
+
     & .field-name {
       padding-right: 24px;
       display: flex;
@@ -48,6 +53,11 @@
       align-items: end;
       font-weight: bold;
       border-right: solid 3px $primary-color;
+
+
+      @media only screen and (max-width: $mobile-breakpoint) {
+        padding-right: 0px;
+      }
     }
 
     & .field-value {
