--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -103,6 +103,10 @@ body {
   scroll-snap-type: y proximity;
   scroll-behavior: smooth;
 
+  @media only screen and (max-width: $mobile-breakpoint) {
+    scroll-snap-type: none;
+  }
+
   &::-webkit-scrollbar {
     width: 1em;
     background-color: $background-color;
