--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,3 +1,4 @@
+$text-xx-small: 15px;
 $text-x-small: 20px;
 $text-small: 30px;
 $text-medium: 40px;
@@ -6,8 +7,6 @@ $text-big: 60px;
 $black-scream: linear-gradient(45deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.2));
 
 $background-color: #121215;
-$primary-color: #764138;
-$primary-accent-color: #9D4A38;
 
 // breakpoints
 $mobile-breakpoint: 600px;
